--- a/html/login.html
+++ b/html/login.html
@@ -10,10 +10,10 @@
     <!-- Links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Css -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="login.scss">
     <!-- Script -->
-    <script src="text.js" defer></script>
+    <script src="login.js" defer></script>
 </head>
 
 <body>
