--- a/html/login.html
+++ b/html/login.html
@@ -19,6 +19,16 @@
 <body>
     <main id="main-content">
 
+        <div id="page-background"></div>
+
+        <div id="login-box">
+            <div id="login-box-left">
+                <img src="" alt="GLR Logo">
+            </div>
+            <div id="login-box-right">
+                <div id="welcome"></div>
+            </div>
+        </div>
         
         <div class="login">
             <h1>Login</h1>
