--- a/html/login.html
+++ b/html/login.html
@@ -26,10 +26,19 @@
                 <img src="" alt="GLR Logo">
             </div>
             <div id="login-box-right">
-                <div id="welcome"></div>
+                <div id="welcome-message">
+                    <h1 id="titel"></h1>
+                    <p id="info"></p>
+                </div>
+
+                <div id="input-fields">
+                    <input type="text" id="username">
+                    <input type="text" id="password">
+                    <button type="submit" id="login-button"></button>
+                </div>
             </div>
         </div>
-        
+
         <div class="login">
             <h1>Login</h1>
             <form action="authenticate.php" method="post">
