--- a/html/studetenLijst.html
+++ b/html/studetenLijst.html
@@ -9,15 +9,21 @@
     <link rel="stylesheet" href="../css/navbar.scss">
 </head>
 <body>
+    <!-- NAVBAR BEGIN -->
     <div class="navbar">
         <div class="items">
-            <div class="logo"></div>
+            <div class="logo"><img src="../assets/images/glrLogoTrans.png" alt="GLR logo" width="100%" height="100%"></div>
         </div>
-        <div class="items"></div>
-        <div class="items"></div>
+        <div class="items">
+            <div class="studenten"><img src="../assets/images/studentIcon.png" alt="student Icon" width="100%" height="100%"></div>
+        </div>
+        <div class="items">
+            <div class="opdrachten"><img src="../assets/images/opdrachtIcon.jpeg" alt="opdrachten Icon" width="100%" height="100%"></div>
+        </div>
         <div class="items"></div>
         <hr class="navbarLine">
         <div class="items"></div>
     </div>
+    <!-- NAVBAR END -->
 </body>
 </html>
