--- a/html/studetenLijst.html
+++ b/html/studetenLijst.html
@@ -12,17 +12,22 @@
     <!-- NAVBAR BEGIN -->
     <div class="navbar">
         <div class="items">
-            <div class="logo"><img src="../assets/images/glrLogoTrans.png" alt="GLR logo" width="100%" height="100%"></div>
+            <div class="logo"><img src="../assets/icons/glrLogoTrans.png" alt="GLR logo" width="100%" height="100%"></div>
         </div>
         <div class="items">
-            <div class="studenten"><img src="../assets/images/studentIcon.png" alt="student Icon" width="100%" height="100%"></div>
+            <div class="studenten"><img src="../assets/icons/studentIcon.png" alt="student Icon" width="100%" height="100%"></div>
         </div>
         <div class="items">
-            <div class="opdrachten"><img src="../assets/images/opdrachtIcon.jpeg" alt="opdrachten Icon" width="100%" height="100%"></div>
+            <div class="opdrachten"><img src="../assets/icons/opdrachtIcon.jpeg" alt="opdrachten Icon" width="100%" height="100%"></div>
         </div>
-        <div class="items"></div>
+        <div class="items">
+            <div class="intake"><img src="../assets/icons/intakeIcon.png" alt="intake Icon" width="100%" height="100%"></div>
+        </div>
         <hr class="navbarLine">
-        <div class="items"></div>
+        <div class="items">
+            <div class="logout"><img src="../assets/icons/logoutIcon.png" alt="logout Icon" width="100%" height="100%"></div>
+
+        </div>
     </div>
     <!-- NAVBAR END -->
 </body>
