--- a/html/login.html
+++ b/html/login.html
@@ -20,15 +20,14 @@
     <main id="main-content">
 
         <div id="page-background"></div>
-
         <div id="login-box">
             <div id="login-box-left">
-                <img src="" alt="GLR Logo">
+                <img src="../assets/icons/glrLogoTrans.png" alt="GLR Logo">
             </div>
             <div id="login-box-right">
                 <div id="welcome-message">
-                    <h1 id="titel"></h1>
-                    <p id="info"></p>
+                    <h1 id="titel">Welkom terug!</h1>
+                    <p id="info">Vul hieronder uw gegevens in.</p>
                 </div>
 
                 <div id="input-fields">
@@ -39,7 +38,7 @@
             </div>
         </div>
 
-        <div class="login">
+        <!-- <div class="login">
             <h1>Login</h1>
             <form action="authenticate.php" method="post">
                 <label for="username">
@@ -52,7 +51,7 @@
                 <input type="password" name="password" placeholder="Password" id="password" required>
                 <input type="submit" value="Login">
             </form>
-        </div>
+        </div> -->
 
 
     </main>
