--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Intake Log In</title>
 
     <!-- Links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,9 +31,9 @@
                 </div>
 
                 <div id="input-fields">
-                    <input type="text" id="username">
-                    <input type="text" id="password">
-                    <button type="submit" id="login-button"></button>
+                    <input type="text" id="username" placeholder="Username">
+                    <input type="text" id="password" placeholder="Password">
+                    <button type="submit" id="login-button">Log in</button>
                 </div>
             </div>
         </div>
@@ -52,7 +52,6 @@
                 <input type="submit" value="Login">
             </form>
         </div> -->
-
 
     </main>
 </body>
