--- a/html/studentenLijst.html
+++ b/html/studentenLijst.html
@@ -7,6 +7,8 @@
     <title>IntakeV2</title>
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/navbar.scss">
+    <link rel="stylesheet" href="../css/studentenLijst/studentenLijst.css">
+    <link rel="stylesheet" href="../css/studentenLijst/studentenLijst.scss">
 </head>
 <body>
     <!-- NAVBAR BEGIN -->
@@ -26,10 +28,14 @@
         <hr class="navbarLine">
         <div class="items itemsLogout">
             <div class="logout"><img class="logoutImage" src="../assets/icons/logoutIcon.png" alt="logout Icon" width="100%" height="100%"><p>log uit</p></div>
-
         </div>
     </div>
     <!-- NAVBAR END -->
+
+    <!-- STUDENTEN LIJST -->
+    <table>
+        
+    </table>
     <script src="../js/navbar.js"></script>
 </body>
 </html>
