--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -103,10 +103,10 @@
                     <div id="drag-drop">
                         <h2 id="drag-name">Drag & Drop</h2>
                         <h3 id="of-name">OF</h3>
-                        <button id="selecteer-bestand" class="btn-toevoeg">Selecteer bestand</button>
+                        <input type="file" id="file-input">
                     </div>
                     <hr id="scheidlijn">
-                    <div id="bestanden">Studenten2023.xls</div>
+                    <!-- <div id="bestanden">Studenten2023.xls</div> -->
                     <button class="btn-toevoeg">Toevoegen</button>
                 </div>
 
