--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -105,7 +105,7 @@
                         <h3 id="of-name">OF</h3>
                         <input type="file" id="file-input">
                     </div>
-                    <hr id="scheidlijn">
+                    <!-- <hr id="scheidlijn"> -->
                     <!-- <div id="bestanden">Studenten2023.xls</div> -->
                     <button class="btn-toevoeg">Toevoegen</button>
                 </div>
