--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -99,15 +99,18 @@
                 <h1>Importeren</h1>
                 <div id="box-importeren" class="box">
                     <p>Voeg excel bestanden toe</p>
-                    <p id="voorbeeld-bestand">Voorbeeld bestand</p>
+                    <a href="../php/excelReader/Intake_Ronde_Velden.xlsx" id="voorbeeld-bestand">Voorbeeld bestand</a>
                     <div id="drag-drop">
                         <h2 id="drag-name">Drag & Drop</h2>
                         <h3 id="of-name">OF</h3>
-                        <input type="file" id="file-input">
+                        <form class="" action="../php/toevoegen.php" method="post" enctype="multipart/form-data">
+                        <input type="file" name="excel" required value="" id="file-input">
+                        
                     </div>
                     <hr id="scheidlijn">
                     <!-- <div id="bestanden">Studenten2023.xls</div> -->
-                    <button class="btn-toevoeg">Toevoegen</button>
+                    <button type="submit" name="import" class="btn-toevoeg">Toevoegen</button>
+                </form>
                 </div>
 
             </div>
