--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -58,7 +58,7 @@
                 <p>Studenten</p>
             </div>
             <div id="tabs">
-                <p>Studenten lijst</p>
+                <p><a href="studentenLijst.html">Studenten lijst</a></p>
                 <p id="current-page">Toevoegen</p>
             </div>
         </div>
@@ -99,7 +99,7 @@
                 <h1>Importeren</h1>
                 <div id="box-importeren" class="box">
                     <p>Voeg excel bestanden toe</p>
-                    <a href="../php/excelReader/Intake_Ronde_Velden.xlsx" id="voorbeeld-bestand">Voorbeeld bestand</a>
+                    <a href="../php/excelReader/Intake_Ronde_Velden.xlsx" id="voorbeeld-bestand">Klik voor voorbeeld bestand</a>
                     <div id="drag-drop">
                         <h2 id="drag-name">Drag & Drop</h2>
                         <h3 id="of-name">OF</h3>
