--- a/html/studentenLijst.html
+++ b/html/studentenLijst.html
@@ -46,7 +46,15 @@
     </div>
     <!-- NAVBAR END -->
     <div id="main-content">
-        <div id="tab-nav"></div>
+        <div id="tab-nav">
+            <div id="tab-title">
+                <p>Studenten</p>
+            </div>
+            <div id="tabs">
+                <p id="current-page">Studenten lijst</p>
+                <p>Toevoegen</p>
+            </div>
+        </div>
         <!-- STUDENTEN LIJST -->
         <div id="content">
             <div id="zoeken-en-filter">
