--- a/html/studentenLijst.html
+++ b/html/studentenLijst.html
@@ -52,7 +52,7 @@
             </div>
             <div id="tabs">
                 <p id="current-page">Studenten lijst</p>
-                <p>Toevoegen</p>
+                <p><a href="studentenToevoegen.html">Toevoegen</a></p>
             </div>
         </div>
         <!-- STUDENTEN LIJST -->
