--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -58,7 +58,7 @@
                 <p>Studenten</p>
             </div>
             <div id="tabs">
-                <p><a href="studentenLijst.html">Studenten lijst</a></p>
+                <p><a href="studentenLijst.php">Studenten lijst</a></p>
                 <p id="current-page">Toevoegen</p>
             </div>
         </div>
