--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -58,7 +58,7 @@
                 <p>Studenten</p>
             </div>
             <div id="tabs">
-                <p><a href="../html/studentenLijst.html">Studenten lijst</a></p>
+                <p><a href="../html/studentenLijst.php">Studenten lijst</a></p>
                 <p id="current-page"><a href="../html/studentenToevoegen.html">Toevoegen</a></p>
             </div>
         </div>
