--- a/html/login.html
+++ b/html/login.html
@@ -32,13 +32,29 @@
 
                 <div id="input-fields">
                     <form action="../php/authenticate.php" method="post">
-                        <input type="text" name="username" id="username" placeholder="Username">
-                        <input type="password" name="password" id="password" placeholder="Password">
-                        <button type="submit" value="login" id="login-button">Log in</button>
+                    <input type="text" name="username" id="username" placeholder="Username">
+                    <input type="password" name="password" id="password" placeholder="Password">
+                    <button type="submit" value="login" id="login-button">Log in</button>
                     </form>
                 </div>
             </div>
         </div>
+
+        <!-- <div class="login">
+            <h1>Login</h1>
+            <form action="authenticate.php" method="post">
+                <label for="username">
+                    <i class="fas fa-user"></i>
+                </label>
+                <input type="text" name="username" placeholder="Username" id="username" required>
+                <label for="password">
+                    <i class="fas fa-lock"></i>
+                </label>
+                <input type="password" name="password" placeholder="Password" id="password" required>
+                <input type="submit" value="Login">
+            </form>
+        </div> -->
+
     </main>
 </body>
 
