--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -44,9 +44,9 @@
         </div>
         <hr class="navbarLine">
         <div class="items itemsLogout">
-            <div class="logout"><img class="logoutImage" src="../assets/icons/logoutIcon.png" alt="logout Icon"
-                    width="100%" height="100%">
-                <p>log uit</p>
+            <div class="logout"><a href="../php/logout.php"><img class="logoutImage" src="../assets/icons/logoutIcon.png" alt="logout Icon"
+                    width="100%" height="100%"></a>
+               <a href="../php/logout.php"><p>log uit</p></a>
             </div>
         </div>
     </div>
