--- a/html/intake.html
+++ b/html/intake.html
@@ -58,8 +58,8 @@
                 <p>Studenten</p>
             </div>
             <div id="tabs">
-                <p><a href="../html/studentenLijst.php">Studenten lijst</a></p>
-                <p id="current-page"><a href="../html/studentenToevoegen.html">Toevoegen</a></p>
+                <p id="current-page"><a href="../html/intake.html">Intakes</a></p>
+                <p><a href="#">Intake rondes</a></p>
             </div>
         </div>
 
