--- a/html/login.html
+++ b/html/login.html
@@ -32,8 +32,8 @@
 
                 <div id="input-fields">
                     <form action="../php/authenticate.php" method="post">
-                    <input type="text" name="username" id="username" placeholder="Username">
-                    <input type="password" name="password" id="password" placeholder="Password">
+                    <input type="text" name="username" id="username" placeholder="Username, Naam: test">
+                    <input type="password" name="password" id="password" placeholder="Password, Wachtwoord: test">
                     <button type="submit" value="login" id="login-button">Log in</button>
                     </form>
                 </div>
