--- a/html/intake.html
+++ b/html/intake.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../css/intake/intake.scss">
     <!-- Script -->
     <script src="../js/intake.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 </head>
 
 <body>
