--- a/html/studentenToevoegen.html
+++ b/html/studentenToevoegen.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../css/studenenToevoegen/studenenToevoegen.scss">
     <!-- Script -->
     <script src="../js/studenenToevoegen.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 </head>
 
 <body>
